--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             color: #fff;
             background: #000;
             height: auto;
-            overflow-y: scroll; /* Scroll aktif */
             overflow-x: hidden;
+            overflow-y: auto;
         }
 
         header {
@@ -111,36 +111,20 @@
             text-decoration: underline;
         }
 
-        /* Beyaz nokta partiküller */
-        .stars {
-            position: absolute; /* fixed yerine absolute */
+        /* Canvas arka plan */
+        #starCanvas {
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 1;
+            z-index: 0;
             pointer-events: none;
-        }
-
-        .star {
-            position: absolute;
-            width: 3px;
-            height: 3px;
-            background: white;
-            border-radius: 50%;
-            opacity: 0.8;
-            animation: float 10s linear infinite;
-        }
-
-        @keyframes float {
-            0% { transform: translateY(0) translateX(0); opacity: 0.8; }
-            100% { transform: translateY(-1200px) translateX(200px); opacity: 0; }
         }
     </style>
 </head>
 <body>
-    <!-- Beyaz nokta partiküller -->
-    <div class="stars" id="stars"></div>
+    <canvas id="starCanvas"></canvas>
 
     <header>NeoLand Studios</header>
     <nav>
@@ -178,20 +162,60 @@
     </footer>
 
     <script>
-        // Beyaz nokta partiküllerini rastgele oluştur
-        const starsContainer = document.getElementById('stars');
-        const totalStars = 50;
+        const canvas = document.getElementById('starCanvas');
+        const ctx = canvas.getContext('2d');
+        let width = canvas.width = window.innerWidth;
+        let height = canvas.height = window.innerHeight;
 
-        for (let i = 0; i < totalStars; i++) {
-            const star = document.createElement('div');
-            star.className = 'star';
-            star.style.left = Math.random() * 100 + '%';
-            star.style.top = Math.random() * 100 + '%';
-            star.style.width = (2 + Math.random() * 3) + 'px';
-            star.style.height = star.style.width;
-            star.style.animationDuration = (5 + Math.random() * 10) + 's';
-            starsContainer.appendChild(star);
+        const stars = [];
+        const numStars = 80;
+
+        for(let i=0;i<numStars;i++){
+            stars.push({
+                x: Math.random()*width,
+                y: Math.random()*height,
+                r: Math.random()*2+1,
+                d: Math.random()*1
+            });
         }
+
+        function drawStars(){
+            ctx.clearRect(0,0,width,height);
+            ctx.fillStyle = 'white';
+            ctx.beginPath();
+            for(let i=0;i<numStars;i++){
+                const s = stars[i];
+                ctx.moveTo(s.x,s.y);
+                ctx.arc(s.x,s.y,s.r,0,Math.PI*2,true);
+            }
+            ctx.fill();
+            updateStars();
+        }
+
+        let angle = 0;
+        function updateStars(){
+            angle += 0.01;
+            for(let i=0;i<numStars;i++){
+                const s = stars[i];
+                s.y += Math.cos(angle+s.d)+0.5;
+                s.x += Math.sin(angle)*0.5;
+                if(s.x > width) s.x = 0;
+                if(s.x < 0) s.x = width;
+                if(s.y > height) s.y = 0;
+            }
+        }
+
+        function animate(){
+            drawStars();
+            requestAnimationFrame(animate);
+        }
+
+        animate();
+
+        window.addEventListener('resize', ()=>{
+            width = canvas.width = window.innerWidth;
+            height = canvas.height = window.innerHeight;
+        });
     </script>
 </body>
 </html>
